--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "koa-router": "^7.4.0",
     "mongoose": "^5.7.12"
   }
 }
