--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroku1",
+  "name": "heroku",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -13,7 +13,7 @@
   "dependencies": {
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "koa-router": "^7.4.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.12"
   }
 }
