--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "socket.io": "^2.3.0"
   }
 }
